# RL-on-Youbot

./: .~lock.FICHE ROS.odt#  .~lock.Memo git.odt#  FICHE ROS.odt  Memo git.odt  README.md  fichierdepuisordi.txt  newfile_fromrepo  theta1.pred~  theta3.pred~  theta4.pred~
blocage_bras/: CMakeLists.txt  CMakeLists.txt~  donnees_points.txt  donnees_points.txt~  intervalles bras  package.xml
blocage_bras/src/: #record_position.cpp#  enregistrement_pos.cpp  record_position.cpp  test_position.cpp  test_position.cpp~  validation_position.cpp
commande_bras/: CMakeLists.txt  CMakeLists.txt~  package.xml
commande_bras/scripts/: bras_teleop.py
commande_bras/src/: commande_clavier.cpp
follow_object/: CMakeLists.txt~  package.xml
follow_object/src/: Etats.hpp  follow_object.cpp  follow_object_gaml.cpp
follow_target/: CMakeLists.txt  package.xml
learning_follow/: CMakeLists.txt  CMakeLists.txt~  package.xml
learning_follow/src/: #learning_follow.cpp#  .#learning_follow.cpp  Etats.hpp  generationRandom.cpp  generationRandom.hpp  learnergaml.cpp  learning_follow.cpp  learning_follow.hpp  theta1.pred  theta2.pred  theta3.pred  theta4.pred  theta5.pred
navigation_youbot/config/: costmap_common_params.yaml
preds/: theta2.pred~
ros_packages/blocage_bras/src/: AnalyseFichierTexte.cpp~  enregistrement_pos.cpp  joints.hpp  record_position.cpp~  test_position.cpp  validation_position.cpp
ros_packages/commande_bras/src/: commande_clavier.cpp~  ecoute_pince.cpp
ros_packages/follow_object/: CMakeLists.txt
ros_packages/follow_object/src/: follow_object.cpp  follow_object_gaml.cpp  learning_follow.hpp
ros_packages/learning_follow/: package.xml  package.xml~
ros_packages/learning_follow/src/: generationRandom.cpp  learnergaml.cpp  learning_follow.cpp~
ros_packages/navigation_youbot/: CMakeLists.txt  CMakeLists.txt~  package.xml
ros_packages/navigation_youbot/config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  global_costmap_params.yaml  local_costmap_params.yaml
ros_packages/navigation_youbot/launch/: move_base.launch  move_base.launch~
ros_packages/synchronisateur/: CMakeLists.txt~  package.xml~
ros_packages/synchronisateur/src/: getR.cpp
ros_packages/traitement_pcl/: CMakeLists.txt~  package.xml
synchronisateur/: CMakeLists.txt  package.xml
synchronisateur/src/: getR.cpp  getThetas.cpp  moveThetas.cpp
synchronisateur/srv/: getR.srv~  getThetas.srv  getThetas.srv~  moveThetas.srv
traitement_pcl/: CMakeLists.txt  CMakeLists.txt~  package.xml
traitement_pcl/src/: plane_delete.cpp
vrep_common/: CMakeLists.txt
